mdr-screen/src/App.css
@font-face {
  font-family: severance-numbers;
  src: url("./assets/PlusJakartaSans-VariableFont_wght.ttf");
}

@font-face {
  font-family: severance-headers;
  src: url("./assets/04abf85192f34526c9125cf1072ea81e.ttf");
}

:root {
  --terminal-color: #5ff5ff; /*#46c2dd; /* rgb: 70, 194, 221 */
  --border-radius: 1px;
  --scaleFactor: 1;
  /* the phosphor bloom settings are different for text than for lines */
  --text-bloom:
    0 0 1px rgba(255, 255, 255, 1),
    0 0 2px #00e5ff,
    0 0 4px rgba(0, 160, 255, 0.6);
  --box-bloom:
    0 0 1px #fff,
    0 0 4px #00e5ff,
    0 0 10px rgba(0, 200, 255, 0.3);
  --CRT-background-color: #05111a;
  font-variant-numeric: tabular-nums;
}

#root {    
  margin: clamp(1vh, 1.2vh + 0.5rem, 5vh); /* to create a physical terminal edge feel*/
  aspect-ratio: 4 / 3;
  width: 100%;
  max-height: 94vh;
  border-radius: 86px; /* to create the rounded corners of the CRT terminal */
  font-family: "severance-headers"; 
  background-color: var(--CRT-background-color);
  border-left: 12px solid #02283f;
  border-right: 12px solid #02283f;
  border-top: 4px solid #02283f;
  border-bottom: 4px solid #02283f;
  font-weight: 600;
  cursor: url("./assets/refinementCursor.svg"), auto;
  overflow-x: hidden;
  overflow-y: hidden;
  max-width: 1500px;
  min-width: 720px;
}
 
.error-overlay {
  display: none;
}

.app-container {
  width: 100%;
  height: 100%;
  min-height: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  flex: 1;
  color: var(--terminal-color);
  position: relative;
  user-select: none;
  filter: saturate(1.0) brightness(1.1) contrast(1.1);
}

/* Create the scan lines. In the Data General Dasher, they appear static, so no need to animate them */
.CRT-static-overlay {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2000;
  pointer-events: none;
  background: 
    /* Layer 1: The Raster Glow (the blue center haze). 2 layers to smooth the concentric circles of the gradient */
    radial-gradient(circle at center, rgba(0, 150, 255, 0.08) 0%, transparent 85%),
    radial-gradient(circle at 45% 45%, rgba(0, 150, 255, 0.08) 0%, transparent 85%),
    /* Layer 2: Vignette */
    radial-gradient(circle, transparent 50%, rgba(0, 0, 0, 0.6) 100%),
    /* layer 3: Scanlines */
    repeating-linear-gradient(
      to bottom, 
      transparent 0px,
      transparent 1px,      
      rgba(0, 0, 0, 0.45) 1px,
      rgba(0, 0, 0, 0.45) 2px
  );
  background-size: 100% 100%, 100% 100%, 100% 2px;
  backdrop-filter: none;
  mask-image: radial-gradient(circle, black 70%, transparent 100%);
}

.header {
  margin: 2.5rem 3rem 1.6rem 3rem;
  padding-left: 0.7rem;
  font-size: 1.6rem;
  border: 3px solid var(--terminal-color);
  border-right: 0;
  border-radius: var(--border-radius);
  display: grid;
  grid-template-columns: 1fr auto 10%;
  height:fit-content;
  position: relative;
  align-content: center;
  gap: 2rem;
  pointer-events: none;
  /* phosphor bloom */
  box-shadow: var(--box-bloom);
}

.refinementProgress{
  justify-self: end;
  margin-right: 1.25rem;
}

.filename, 
.refinementProgress {
  /* phosphor bloom */
  text-shadow: var(--text-bloom);
}

/* Stacking and blurring logos was chosen as applying a filter: drop-shadow() was creating a ghost 
of the logo */
.logo-stack {
  justify-self: end;
  position: absolute;
  overflow: visible;
  top: -1.1rem;
  right: -1.55rem;
  height: 4.65rem;
  width: auto;
}

.lumonLogo {
  position: absolute;
  top: 0;
  right: 0;
  width: auto;
  height: 100%;
  object-fit: contain;
}

.lumonLogo.bloom {
  filter: hue-rotate(30deg) saturate(3) blur(4px);
  opacity: 0.8;
  mix-blend-mode: screen;
  z-index: 1;
}

.lumonLogo.core {
  filter: hue-rotate(30deg) brightness(1.6) contrast(1.2) blur(0.3px);
  z-index: 2;
}

hr {
  border: 1.5px solid var(--terminal-color);
  margin: 1.5px 0;
  /* phosphor bloom */
  box-shadow: var(--box-bloom);
}

#visibleWindow {
  position: relative;
  flex: 1; /* fill the app-container */
  overflow: hidden;
  min-height: 0;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  outline: none;
}

.macrodataContainer {
  overflow: hidden !important; 
  scrollbar-width: none;
  -ms-overflow-style: none;
  transition: margin 0.35s ease-in-out;
}

#macrodataContainer::-webkit-scrollbar {
  display: none;
}

.numbers {
  font-size: 1.45rem;
  font-family: "severance-numbers";
  font-weight: 700;
  text-align: center;
  aspect-ratio: 1/1;
  display: flex;
  justify-content: center;
  align-items: center;
  /* phoshor bloom */
  text-shadow: var(--text-bloom);
  transform: scale(var(--scaleFactor, 1));
  will-change: transform;
} 

.wasteSection {
  display: grid;
  margin: 0.3rem 2.75rem;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  gap: 0.3rem 2rem;
  font-family: "severance-numbers";
}

.container01,
.container02,
.container03,
.container04,
.container05 {
  position: relative;
}

.bin01,
.bin02,
.bin03,
.bin04,
.bin05 {
  position: relative;   
  text-align: center;
  z-index: 500;
  border: 3px solid var(--terminal-color);
  border-radius: var(--border-radius);
  background: transparent;
  /* phosphor bloom */
  box-shadow: var(--box-bloom), inset var(--box-bloom);
  text-shadow: var(--text-bloom);
}

/* layer created to help add shadows on filled bin divs.*/
.bin-fill {
  position: absolute;
  inset: 0;
  background-color: var(--CRT-background-color); /* can't be transparent, because a box isn't see through */
  z-index: 499;
}

/* State 0: idle */
.binLid-top,
.binLid-top.idle {
  position: absolute;
  z-index: 100;
  top: 0px;  /* Final position post-animation */
  left: 0px;
  width: calc(100% - 6px);
  background-color: var(--CRT-background-color); /* can't be transparent, because a box isn't see through */
  height: 11px;
  border: 3px solid var(--terminal-color);
  border-radius: var(--border-radius);
  /* animation setup */
  pointer-events: none;
  transition: transform 0.75s ease;
}

/* State 1: Opening Top Lid */
.binLid-top.opening-top,
.binLid-top.open,
.binLid-top.opening-sides,
.binLid-top.closing-sides {
  transform: translateY(-14px);
  /* phosphor bloom */
  box-shadow: 
    var(--box-bloom),
    inset var(--box-bloom);
}

/* State 5: Closing Top Lid */
.binLid-top.closing-top {
  transform: translateY(12px);
}

.binLid-left, 
.binLid-right {
  position: absolute;
  top: -10px; /* sit them perfectly on top of bin's 3px border */
  width: calc(50% - 3px);
  height: 6px;
  z-Index: 99;
  background-color: var(--CRT-background-color); /* can't be transparent, because a box isn't see through */
  border: 3px solid var(--terminal-color);
  border-radius: var(--border-radius);
  visibility: hidden;
}

.binLid-left {
  left: 2px;
  transform-origin: top left;
}

.binLid-right {
  right: 2px;
  transform-origin: top right;
}

.binLid-left.opening-sides,
.binLid-right.opening-sides,
.binLid-left.open,
.binLid-right.open,
.binLid-left.closing-sides,
.binLid-right.closing-sides {
  visibility: visible;
  /* phosphor bloom */
  box-shadow: 
    var(--box-bloom),
    inset var(--box-bloom);
}

/* Step 2: Animate Side Lids Opening */
.binLid-left.opening-sides {
  animation: openLidLeft 0.65s ease forwards
}
.binLid-right.opening-sides {
  animation: openLidRight 0.65s ease forwards
}

/* State 4: Animate Side Lids Closing */
.binLid-left.closing-sides {
  animation: closeLidLeft 0.65s ease forwards;
}

.binLid-right.closing-sides {
  animation: closeLidRight 0.65s ease forwards;
}

.binLid-left.open {
  transform: translateY(12px) rotate(-135deg) skewX(45deg);
}

.binLid-right.open {
  transform: translateY(12px) rotate(135deg) skewX(-45deg);
}

@keyframes openLidLeft {
  from { transform: rotate(0deg) skewX(0deg); }
  to { transform: translateY(12px) rotate(-135deg) skewX(45deg); }
}
  
@keyframes openLidRight {
  from { transform: rotate(0deg) skewX(0deg); }
  to { transform: translateY(12px) rotate(135deg) skewX(-45deg); }
}

@keyframes closeLidLeft {
  from { transform: translateY(12px) rotate(-135deg) skewX(45deg); }
  to { transform: rotate(0deg) skewX(0deg); }
}

@keyframes closeLidRight {
  from { transform: translateY(12px) rotate(135deg) skewX(-45deg); }
  to { transform: rotate(0deg) skewX(0deg); }
}

[class^="binProgress"] {
  text-align: left;
  padding-left: 3px;
  border: 3px solid var(--terminal-color);
  border-radius: var(--border-radius);
  /* phosphor bloom */
  box-shadow: var(--box-bloom), inset var(--box-bloom);
  text-shadow: var(--text-bloom);
}

.flying-item-container {
  font-size: 1.45rem;
  font-family: "severance-numbers";
  z-index: 20;
  text-shadow: var(--text-bloom);
  transform: scale(var(--scaleFactor, 1)), translateZ(0);
}

footer {
  text-align: center;
  font-size: 1.3rem;
  /* phosphor bloom */
  text-shadow: var(--text-bloom);
  transform: scale(var(--scaleFactor, 1));
  padding: 0 0 0.5vh 0;
}

/* When the screen is too small to operate the refinement process, we show the error component with Sevy */
@media screen and (max-width: 719px), screen and (max-height: 599px) {
  #root {
    min-width: 400px;
    min-height: 400px;
  }  

  .error-overlay {
    display: flex;
    flex-direction: column;
    gap: 4vh;
    padding: 6vw;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    font-size: clamp(1rem, 3vw + 0.5rem, 1.75rem);
    font-weight: bold;
    font-family: "severance-numbers";
    text-align: center;
    background-color: #fcfcf9;
    border-radius: 82px;
    box-sizing: border-box;
    color: #595e7a
  }

  /* Make the MDR display components hidden when the screen is too small to operate it properly */
  #root > :not(:first-child) {
    display: none;
  }

  .error-overlay > p {
    margin: 0;
    flex: 0 1 auto;
    align-content: center;
  }

  .sevy-container {
    flex: 0 1 58%;
    height: auto;
    overflow: hidden;
  }

  .sevy {
    width: 100%;
    height: 100%;
    object-fit: fill;
  }
}

